--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             overflow: hidden;
         }
         .tabs {
+            overflow: hidden;
             width: 100vw;
             height: 100vh;
             display: flex;
