--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         .tabs > .contents {
             overflow: hidden;
             display: flex;
-            width: auto;
-            position: absolute;
             left: 0;
             top: 0;
             width: auto;
+            height: 100vh;
+            position: fixed;
             transition: transform 0.333s ease-in-out;
         }
 
