--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <style>
 
-        a, button, input {
+        a, button, input, label {
             outline: 0 !important;
         }
 
-        a {
+        a, button, input, label {
 	        -webkit-tap-highlight-color: #0000
         }
 
