--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
         a, button, input, label {
             outline: 0 !important;
-        }
-
-        a, button, input, label {
-	        -webkit-tap-highlight-color: #0000
+	        -webkit-tap-highlight-color: transparent;
         }
 
         :root {
