--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
             margin: 0;
             overflow: hidden;
             font-family: Arial, Helvetica, sans-serif;
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                             supported by Chrome, Opera and Firefox */
         }
 
         .tabs {
-            user-select: none;
             overflow: hidden;
             width: 100vw;
             height: 100vh;
