--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         }
 
         body {
+            overscroll-behavior: none;
             padding: 0;
             margin: 0;
             overflow: hidden;
@@ -34,11 +35,11 @@
 
         .tabs {
             overflow: hidden;
+            overscroll-behavior: none;
             width: 100vw;
             height: 100vh;
             display: flex;
             align-items: flex-end;
-            overflow: hidden;
         }
 
         .tabs > a {
