--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="manifest" href="/manifest.webmanifest">
     <style>
 
@@ -51,6 +51,9 @@
             text-align: center;
             color: #000;
             text-decoration: none;
+            font-size: 16px;
+            text-transform: uppercase;
+            font-weight: bold;
             border-right: 1px solid #BBB;
             z-index: 2;
         }
@@ -179,11 +182,19 @@
             display: inline-block;
             margin: 16px;
             width: auto;
-            background: #AEE;
-            border-radius: 4px;
-            box-shadow: inset 0 0 3px #FFF;
-            padding: 5px;
-            border: 1px solid black;
+            background: rgb(86, 206, 116);
+            border-radius: 5px;
+            color: #FFF;
+            font-size: 16px;
+            text-transform: uppercase;
+            font-weight: bold;
+            padding: 16px;
+            border: 2px sold rgb(46, 109, 62);
+        }
+
+        label.button.red {
+            background: rgb(206, 86, 116);
+            border: 2px sold rgb(109, 46, 62);
         }
 
     </style>
@@ -247,7 +258,8 @@
         <div class="content">
             <div class="pad">
                 A modal dialog
-                <label for="dialog" class="button">Close</label>
+                <label for="dialog" class="button red">Close</label>
+                <label for="dialog" class="button">OK</label>
             </div>
         </div>
     </section>
