--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             --tab-transition-time: 0.15s ease-in-out;
         }
 
+        html {
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+        }
+
         body {
             overscroll-behavior: none;
             padding: 0;
