--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             --tab-transition-time: 0.15s ease-in-out;
         }
 
-        html {
-            height: 100vh;
-            width: 100vw;
+        html, body {
+            position: fixed;
             overflow: hidden;
         }
 
